# Chinverse

./: .env.template  .gitignore  README.md  package-lock.json  verify_db_config.py  verify_models.py
backend/: .env.example  DATABASE_WORKFLOW.md  alembic.ini  apply_migration.ps1  check_db.py  check_tables.py  nuke_db.py  pyproject.toml  reset_db.py  seed_hsk.py  seed_lms.py  verify_auth.py  verify_auth_flow.py
backend/alembic/: env.py
backend/alembic/versions/: 1f3c7d8a4b2e_add_section_and_lesson_metadata.py  385a1fb4bfc5_add_leitner_flashcards.py  5a47fa0a0aa1_verify_schema.py  6c72d1746975_initial_migration_with_user_gallery.py  8b7e2d4c9f01_add_course_slugs_and_metadata.py  a4c8e2f6b9d1_add_content_engagements.py  a5df6541b707_initial_migration.py  a9d4e6f2b8c1_add_daily_activity_tracking.py  b0a8f1c2d3e4_add_database_health_indexes.py  c2f7a8d4e9b1_add_referrals.py  c6d9f5a7e2c1_add_media_storage_and_lesson_video_metadata.py  d65814ea7db8_add_articles_and_support_tickets.py  d71f1b6de0c6_fresh_init_full_app.py  d7e9b2c4f6a8_add_subscription_orders.py  dd124a8d803d_add_messages_table.py  e2b7c9d4a6f1_add_dictionary_ai_drafts.py  e7e64854d48d_final_full_setup.py  e8a1c4b9d2f3_add_user_saved_courses.py  f1a2b3c4d5e6_add_community_threads.py  f4b8c2d9a1e0_add_user_notifications.py  f9c1e4d2a8b7_drop_dictionary_ai_drafts.py
backend/app/: main.py
backend/app/api/: deps.py  errors.py  pagination.py  rate_limit.py
backend/app/core/: config.py  paths.py  security.py  storage.py  uploads.py
backend/app/db/: base_class.py  safety.py  session.py
frontend/: README.md  (+5 more)
(+198 files in other folders)
